--- a/stylesheets/components/StoryViewer.scss
+++ b/stylesheets/components/StoryViewer.scss
@@ -29,6 +29,7 @@
   &__close-button {
     @include button-reset;
     @include modal-close-button;
+    top: var(--title-bar-drag-area-height);
   }
 
   &__more {
@@ -36,7 +37,7 @@
     height: 24px;
     position: absolute;
     right: 48px;
-    top: 12px;
+    top: var(--title-bar-drag-area-height);
     width: 24px;
 
     @include color-svg('../images/icons/v2/more-horiz-24.svg', $color-white);
